# usr

./: CMakeLists.txt  README.md
.github/workflows/: publish.yml
benchmarks/: bench_crypto.c
examples/: full_demo.c
include/usr/: binary.h  bytes.h  crypto.h  encoding.h  entities.h  error.h  html.h  markdown.h  media.h  rand.h  strbuilder.h  usr.h  utf8.h  version.h
python/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/tests/: test_python.py
python/usr/: __init__.py  _lib.py  _structs.py  binary.py  crypto.py  encoding.py  entities.py  html.py  markdown.py
src/binary/: binary.c
src/bytes/: bytes.c  error.c
src/crypto/: aes_block.c  aes_block_decrypt.c  aes_cbc.c  aes_ctr.c  aes_ige.c  aes_tables.c  aes_tables.h  crc32.c  crypto_stub.c  hmac.c  rand.c  sha256.c  sha512.c
src/encoding/: encoding.c
src/entities/: entities.c  entities_stub.c  normalize.c
src/html/: entities_to_html.c  entities_to_html_rt.c  html.c  html_stub.c
src/markdown/: markdown.c  markdown_stub.c
src/media/: media.c
src/string/: strbuilder.c
src/utf8/: utf8.c
tests/: entity_eq.h  fuzz_roundtrip.c  test_crypto.c  test_encoding.c  test_roundtrip.c  test_utf8.c
tools/: test1.py  test2.py  test3_hard.py
